Fixed bug from testing quotes-section on iphone5 - quotes did not fit in section-container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,12 @@ footer {
         margin: auto;
     }
     body{
-        font-size: 1rem;
+        font-size: 1 rem;
     }
+}
+@media screen and (max-height: 700px) {
+    .section-container{
+     min-height: 700px;
+     padding-top: 100px;
+ }
 }
